src/objects/jj_rb_Rebate_Accrual_Line_Item__c.object
<CustomObject>
    <description>Product line items present in the Rebate accrual form.</description>
    <fields>
        <fullName>Rebate_Adjustment__c</fullName>
        <label>Rebate Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate_Accrual_After_Adj__c</fullName>
        <formula>jj_rb_Net_Rebate_Accrual_Amount__c  +  Rebate_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rebate Accrual After Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate_Accrual_Amount__c</fullName>
        <label>Net Rebate Accrual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Rebate Accrual Line Item</relationshipLabel>
        <relationshipName>Rebate_Accrual_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Accrual__c</fullName>
        <description>Master Rebate accrual for which these line items are created.</description>
        <label>Rebate Accrual</label>
        <referenceTo>jj_rb_Rebate_Accrual__c</referenceTo>
        <relationshipLabel>Rebate Accrual Line Item</relationshipLabel>
        <relationshipName>Rebate_Accrual_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Customer_No__c</fullName>
        <formula>jj_rb_Rebate_Accrual__r.jj_rb_Customer__r.jj_rb_SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP_Customer_No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Material_No__c</fullName>
        <formula>jj_rb_Product__r.jj_rb_SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rebate Accrual Line Item</label>
    <nameField>
        <displayFormat>RALI-{000}</displayFormat>
        <label>Rebate Accrual Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Accrual Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>jj_rb_AdjustmentNotGreaterAccrual</fullName>
        <active>true</active>
        <description>Adjustment value cannot be greater than accrual.</description>
        <errorConditionFormula>jj_rb_Net_Rebate_Accrual_After_Adj__c &lt; 0</errorConditionFormula>
        <errorMessage>Rebate adjustment cannot be greater than net rebate accrual amount.</errorMessage>
    </validationRules>
</CustomObject>